Updated CSS to make Edit close icon align correctly

--- a/src/Dnn.vNext/wwwroot/css/site.css
+++ b/src/Dnn.vNext/wwwroot/css/site.css
@@ -328,5 +328,6 @@ footer.admin {
     bottom: 0;
     color: white;
     position: absolute;
+    width: 100% !important;
     display:none;
 }
